# optimizer

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  db.rs  drilling.rs  export.rs  import.rs  lib.rs  main.rs  parse.rs
backend/src/optimizer/: mod.rs  model.rs  solver.rs  units.rs
docs/: ALGORITHME.md  ARCHITECTURE.md  CAHIER-DES-CHARGES.md  cahier-des-charges.docx
docs/specs/: cahier-des-charges-percage.docx  calcul-percage.html
exemples/: modele_liste_coupe.xlsx
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  DrillingView.tsx  History.tsx  Icon.tsx  LengthInput.tsx  Modal.tsx  ResultView.tsx  SectionHelp.tsx  api.ts  help.tsx  main.tsx  styles.css  types.ts  units.ts
