[package]
name = "optimiseur-coupe"
version = "0.1.0"
edition = "2021"
description = "Optimiseur de plans de coupe (1D cutting stock) pour extrusions"
authors = ["GestEase Technologie Inc."]
license = "MIT"
repository = "https://github.com/dominicpotvin/optimizer"

[[bin]]
name = "optimiseur-coupe"
path = "src/main.rs"

[lib]
name = "optimiseur_coupe"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "chrono", "json", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
calamine = "0.26"
csv = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
